# mle-interview-challenge

./: .gitignore  Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yml  requirements.txt  zip_challenge.sh
app/: Dockerfile  Makefile  pyproject.toml
app/src/: app.py  contract.py  events.json
app/terraform/: Makefile
app/terraform/aws/: main.tf  references.tf  state.tf  variables_base.tf
app/terraform/config/dev/: common.tfvars  release.tfvars
data/: events.csv
notebooks/: .gitkeep  handle_forecast.ipynb  handle_forecast_basic_solution.ipynb
sql/: setup.sql
