[tool.poetry]
name = "mle-interview-challenge"
version = "0.1.0"
description = ""
authors = ["camrmarquis <camrmarquis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
fastapi-utils = "^0.2.1"
uvicorn = "^0.23.2"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
